--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A small program to return a shorter url. Made for FCC backend curriculum",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,10 @@
   },
   "homepage": "https://github.com/Marmiz/url-shortener#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mongodb": "^2.2.9",
+    "nodemon": "^1.10.2",
+    "shortid": "^2.2.6",
+    "valid-url": "^1.0.9"
   }
 }
